base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: "janus-idp"
  labels: 
    app.kubernetes.io/component: backstage
  annotations:
    backstage.io/kubernetes-id: janus-idp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: backstage
  strategy:
    type: RollingUpdate
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 120
      maxSurge: "20%"
      maxUnavailable: "0%"
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backstage
      annotations:
        checksum/app-config: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        backstage.io/kubernetes-id: janus-idp
    spec:
      serviceAccountName: default
      containers:
        - resources:
            limits:
              cpu: 500m
            requests:
              cpu: 400m
          name: backstage-showcase
          image: quay.io/rh_ee_pknight/backstage-showcase:template
          imagePullPolicy: "Always"
          command:
            - node
            - packages/backend
          ports:
            - name: backend
              containerPort: 7007
              protocol: TCP
