base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: "janus-idp" 
  labels:
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: janus-idp
    app.kubernetes.io/part-of: backstage
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http-backend
      port: 4180
      targetPort: oauth2-proxy
      protocol: TCP
  selector:
    app.kubernetes.io/component: backstage
