base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: "janus-idp"
  labels:
    app.kubernetes.io/component: backstage
  annotations:
    backstage.io/kubernetes-id: janus-idp
spec:
  tls:
    - hosts:
      - backstage.apps-crc.testing
      secretName: janus-idp-cert
  rules:
    - host: backstage.apps-crc.testing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 7007
